@@ -232,7 +232,7 @@ public:
         CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
                 ham_erase(db, 0, &key, 0));
         CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
-                ham_cursor_replace(cursor, &rec, 0));
+                ham_cursor_overwrite(cursor, &rec, 0));
         CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
                 ham_cursor_insert(cursor, &key, &rec, 0));
         CPPUNIT_ASSERT_EQUAL(HAM_DB_READ_ONLY, 
@@ -488,9 +488,9 @@ public:
         ham_record_t *record=0;
 
         CPPUNIT_ASSERT_EQUAL(HAM_INV_PARAMETER, 
-                ham_cursor_replace(0, record, 0));
+                ham_cursor_overwrite(0, record, 0));
         CPPUNIT_ASSERT_EQUAL(HAM_INV_PARAMETER, 
-                ham_cursor_replace(&cursor, 0, 0));
+                ham_cursor_overwrite(&cursor, 0, 0));
     }
 
     void cursorFindTest(void)
